--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -46,7 +46,7 @@ jobs:
             echo "GH_USER: \$GH_USER"
             echo "REPO_URL: \$REPO_URL"
 
-            PROJECT_DIR="/root/app/facturasvPDFFE"
+            PROJECT_DIR="/root/app/pdfmaker-fe"
             if [ ! -d "\$PROJECT_DIR/.git" ]; then
               echo "Repositorio no válido o inexistente. Clonando de nuevo..."
               rm -rf "\$PROJECT_DIR"
@@ -62,8 +62,10 @@ jobs:
               exit 1
             }
 
+            cd "/root/app/arch-fe"
+
             docker compose pull
-            docker compose up -d --force-recreate --build
+            docker compose up -d --force-recreate --build pdfmaker-fe
 
             echo "===> Despliegue completado"
           EOF
