--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -57,7 +57,7 @@ jobs:
             fi
 
             cd "\$PROJECT_DIR"
-            git pull origin main || {
+            git pull origin master || {
               echo "Error al hacer git pull"
               exit 1
             }
